Update tab 2 in ciberseguridad page and fix filename in mix-manifest.json

--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -3,60 +3,76 @@
     <div class="as__section_wrapper">
       <div class="as__section_content">
         <p>
-          En ASULADO, <span class="font-semibold">nuestra prioridad es ofrecerte experiencias seguras en nuestros canales de atención.</span>
-
-        </p><br>
-        <p>Sigue las siguientes recomendaciones y mantén tus datos protegidos de posibles amenazas.</p>
-      </div>
-    </div>
-  </section>
-
-  <section  class="bg-[#08c0fd] as__section pt-20 pb-20">
-    <div class="as__section_wrapper">
-      <div class="as__section_content">
-        <p class="text-6xl text-center text-white font-je font-semibold">Nuestros <span class="inline-block rounded-full text-white bg-azul-dark px-3 py-1">canales</span><br class="md:block hidden" />
-          de atención:
-
+          En ASULADO,
+          <span class="font-semibold"
+            >nuestra prioridad es ofrecerte experiencias seguras en nuestros
+            canales de atención.</span
+          >
+        </p>
+        <br />
+        <p>
+          Sigue las siguientes recomendaciones y mantén tus datos protegidos de
+          posibles amenazas.
         </p>
       </div>
     </div>
   </section>
 
+  <section class="bg-[#08c0fd] as__section pt-20 pb-20">
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <p class="text-6xl text-center text-white font-je font-semibold">
+          Nuestros
+          <span
+            class="inline-block rounded-full text-white bg-azul-dark px-3 py-1"
+            >canales</span
+          ><br class="md:block hidden" />
+          de atención:
+        </p>
+      </div>
+    </div>
+  </section>
 
   <section
-  class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2.svg)] bg-center bg-contain bg-no-repeat"
->
-  <div class="as__section_wrapper">
-    <div class="as__section_content">
-      <div
-        class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
-      >
-        <div class="w-full md:w-1/2 flex flex-col gap-4">
-          <h4 class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold">
-            Chat web <br class="md:block hidden" />
-            con <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
-              >LUSA</span
+    class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2.svg)] bg-center bg-contain bg-no-repeat"
+  >
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold"
             >
-          </h4>
-          <div class="text-base text-white md:pl-12">
-            <ul class="start-li text-azul-norm">
-              <li>
-                Ingresa al chat con Lusa <b>únicamente a través del sitio web oficial</b> de ASULADO (www.asulado.com).
-              </li>
-            </ul>
+              Chat web <br class="md:block hidden" />
+              con
+              <span
+                class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+                >LUSA</span
+              >
+            </h4>
+            <div class="text-base text-white md:pl-12">
+              <ul class="start-li text-azul-norm">
+                <li>
+                  Ingresa al chat con Lusa
+                  <b>únicamente a través del sitio web oficial</b> de ASULADO
+                  (www.asulado.com).
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
-        <div class="w-full md:w-1/2">
-          <img
-            class="max-w-[350px] mx-auto"
-            src="/assets/images/img_tab1_ciber.webp"
-            alt=""
-          />
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[350px] mx-auto"
+              src="/assets/images/img_tab1_ciber.webp"
+              alt=""
+            />
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <section
     class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_1.svg)] bg-center bg-contain"
@@ -67,7 +83,9 @@
           class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
         >
           <div class="w-full md:w-1/2 flex flex-col gap-4">
-            <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-white font-je font-semibold"
+            >
               <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
                 >WhatsApp</span
               >
@@ -99,113 +117,143 @@
   </section>
 
   <section
-  class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2_2.svg)] bg-center bg-contain bg-no-repeat"
->
-  <div class="as__section_wrapper">
-    <div class="as__section_content">
-      <div
-        class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
-      >
-        <div class="w-full md:w-1/2 flex flex-col gap-4">
-          <h4 class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold">
-            Sitio <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
-              >WEB</span
+    class="bg-[#eef7fc] as__section bg-[url(/assets/images/ciber/2_2.svg)] bg-center bg-contain bg-no-repeat"
+  >
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold"
             >
-          </h4>
-          <div class="text-base text-white md:pl-12">
-            <ul class="start-li text-azul-norm">
-              <li>
-                Asegúrate de que el enlace al que ingresas sea el oficial de ASULADO:  <b>revisa que empiece por https://</b> e incluya un símbolo de candado a la izquierda.
-              </li>
-            </ul>
+              Sitio
+              <span
+                class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+                >WEB</span
+              >
+            </h4>
+            <div class="text-base text-white md:pl-12">
+              <ul class="start-li text-azul-norm">
+                <li>
+                  Asegúrate de que el enlace al que ingresas sea el oficial de
+                  ASULADO: <b>revisa que empiece por https://</b> e incluya un
+                  símbolo de candado a la izquierda.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[300px] mx-auto"
+              src="/assets/images/img_tab3_ciber.webp"
+              alt=""
+            />
           </div>
         </div>
-        <div class="w-full md:w-1/2">
-          <img
-            class="max-w-[300px] mx-auto"
-            src="/assets/images/img_tab3_ciber.webp"
-            alt=""
-          />
+      </div>
+    </div>
+  </section>
+
+  <section
+    class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat"
+  >
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-white font-je font-semibold"
+            >
+              Portal
+              <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
+                >Transaccional</span
+              >
+            </h4>
+            <div class="text-base text-white md:pr-12">
+              <ul class="start-li">
+                <li>
+                  Asegúrate de que tu contraseña sea segura:
+                  <b
+                    >que tenga mínimo 8 caracteres y combine letras mayúsculas y
+                    minúsculas, números y caracteres especiales.</b
+                  >
+                </li>
+                <li>
+                  Ingresa al Portal Transaccional solo desde el sitio web o
+                  links oficiales de ASULADO.
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[300px] mx-auto"
+              src="/assets/images/img_tab4_ciber.webp"
+              alt=""
+            />
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
-<section
-class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat"
->
-<div class="as__section_wrapper">
-  <div class="as__section_content">
-    <div
-      class="py-16 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row gap-8 md:justify-between md:items-center"
-    >
-      <div class="w-full md:w-1/2 flex flex-col gap-4">
-        <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
-          Portal
-          <span class="inline-block rounded-full bg-azul-bright2 px-3 py-1"
-            >Transaccional</span
+  <section class="bg-[#08c0fd] as__section">
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="pt-16 w-full mx-auto flex flex-col gap-y-4 md:flex-row md:justify-between md:items-center"
+        >
+          <div class="order-2 md:order-1 w-full md:w-1/3 flex flex-col">
+            <div
+              class=" text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 md:ml-28 md:mb-12"
+            >
+              <p>
+                Evita compartir información que pueda comprometer la seguridad
+                de tus datos e información,
+                <span class="font-semibold"
+                  >contraseñas, claves o datos bancarios.</span
+                >
+              </p>
+            </div>
+          </div>
+          <div class="order-1 md:order-2 w-full md:w-1/3">
+            <img
+              class="max-w-xs md:max-w-full md:w-full mx-auto"
+              src="/assets/images/img_tab5_ciber.webp"
+              alt=""
+            />
+          </div>
+          <div class="order-3 md:order-3 w-full md:w-1/3 flex flex-col relative md:-left-10">
+            <div
+              class="text-center text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 md:mr-28 md:mb-32"
+            >
+              <p>
+                No accedas a enlaces sin estar
+                <span class="font-semibold"
+                  >100% seguro de que son confiables</span
+                >
+                y provengan de fuentes oficiales.
+              </p>
+            </div>
+          </div>
+        </div>
+        <h4
+          class="text-3xl md:text-5xl text-center text-white font-je font-semibold z-10 md:-mt-20 pb-16 mt-4"
+        >
+          Recomendaciones<br class="md:block hidden" />
+          <span
+            class="inline-block rounded-full text-white bg-azul-dark px-3 py-1"
+            >generales</span
           >
         </h4>
-        <div class="text-base text-white md:pr-12">
-          <ul class="start-li">
-            <li>
-              Asegúrate de que tu contraseña sea segura: <b>que tenga mínimo 8 caracteres y combine letras mayúsculas y minúsculas, números y caracteres especiales.</b>
-            </li>
-            <li>
-              Ingresa al Portal Transaccional solo desde el sitio web o links oficiales de ASULADO.
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="w-full md:w-1/2">
-        <img
-          class="max-w-[300px] mx-auto"
-          src="/assets/images/img_tab4_ciber.webp"
-          alt=""
-        />
-       
       </div>
     </div>
-  </div>
-</div>
-</section>
+  </section>
 
-
-<section class="bg-[#08c0fd] as__section">
-<div class="as__section_wrapper">
-  <div class="as__section_content">
-    <div class="py-16 w-full mx-auto flex flex-col-reverse md:flex-row  md:justify-between md:items-center">
-      <div class="w-full md:w-1/3 flex flex-col">
-        <div class="text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 ml-28 mb-64">
-          <p>Evita compartir información que pueda comprometer la seguridad de tus datos e información, <span class="font-semibold">contraseñas, claves o datos bancarios.</span> </p>
-        </div>
-      </div>
-      <div class="w-full md:w-1/3">
-        <img
-          class="max-w-[100%] mx-auto "
-          src="/assets/images/img_tab5_ciber.webp"
-          alt=""
-        />
-        <p class="text-6xl text-center text-white font-je font-semibold z-10">Recomendaciones<br class="md:block hidden" />
-          <span class="inline-block rounded-full text-white bg-azul-dark px-3 py-1">generales</span>
-
-        </p>
-      </div>
-      <div class="w-full md:w-1/3 flex flex-col relative -left-10">
-        <div class="text-center text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 mr-28 mb-32">
-          <p>No accedas a enlaces sin estar <span class="font-semibold">100% seguro de que son confiables</span> y provengan de fuentes oficiales.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
-
- 
-
- 
   <!--<section id="as__ciber_t1_slider" class="as__section as__ciber_t2_grid">
     <div class="as__section_wrapper">
       <div class="as__section_content as-ciber">
