--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -201,7 +201,7 @@
     </div>
   </section>
 
-  <section class="bg-[#08c0fd] as__section">
+  <section class="bg-[#08c0fd] as__section bg-[url(/assets/images/ciber/2_4.svg)] bg-center bg-contain bg-no-repeat">
     <div class="as__section_wrapper">
       <div class="as__section_content">
         <div
