--- a/src/partials/ciber/slide_1.html
+++ b/src/partials/ciber/slide_1.html
@@ -9,7 +9,7 @@
             <div class="col-start-3 col-span-4 row-start-1 row-span-4">
               <img
                 class="mt-8 max-w-sm z-10 self-center w-full mx-auto md:max-w-[400px]"
-                src="/assets/images/tips-def.webp"
+                src="/assets/images/tips_img_1.webp"
                 alt=""
               />
             </div>
