--- a/src/partials/home/banners.html
+++ b/src/partials/home/banners.html
@@ -4,14 +4,14 @@
       <div class="banner banner_1 active">
         <div class="as__banner_content">
           <h1>
-            <span class="ban_anim1" style="font-size: 24px; line-height: 24px; font-weight: 600;">¡Ahora con Lusa también puedes gestionar tu <br /><span style="color: #2752b0">Certificado de Ingresos y Retenciones!</span>
+            <span class="ban_anim1" style="font-size: 24px; line-height: 24px; font-weight: 600;">¡Ahora con Lusa puedes gestionar tu <br /><span style="color: #2752b0">Certificado de Ingresos y Retenciones!</span>
             </span>
           </h1>
           <div>
             <p class="ban_anim1" >
               Recuerda que también puedes solicitar: colilla de pago, certificado de pensión y copia de la póliza.
             </p>
-            <p class="dest ban_anim1" style="font-style: italic;">
+            <p class="dest ban_anim1">
               <b>¡Escríbele a Lusa y recibe la información de forma fácil y rápida!
               </b>
             </p>
