--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -156,7 +156,7 @@
     </div>
   </section>
 
-  <section
+ <!-- <section
     class="bg-[#0f3c84] as__section bg-[url(/assets/images/ciber/2_3.svg)] bg-center bg-contain bg-no-repeat"
   >
     <div class="as__section_wrapper">
@@ -199,7 +199,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <section class="bg-[#08c0fd] as__section bg-[url(/assets/images/ciber/2_4.svg)] bg-center bg-contain bg-no-repeat">
     <div class="as__section_wrapper">
