--- a/src/partials/PORTAL/4_novedades/4_1_2.html
+++ b/src/partials/PORTAL/4_novedades/4_1_2.html
@@ -1796,12 +1796,10 @@
                 <tr>
                   <td class="dataCol first last" colspan="2">
                     <p class="palert">
-                      <span>
-                        Actualmente tienes en curso una novedad de Traslado de
-                        EPS bajo el radicado NOVN-00000622, si deseas mas
-                        información puedes dirigirte a la seccion de
-                        <a href="Novedades_consulta">Consulta de novedades</a>
-                      </span>
+                      Actualmente tienes en curso una novedad de Traslado de EPS
+                      bajo el radicado NOVN-00000622, si deseas mas información
+                      puedes dirigirte a la seccion de
+                      <a href="Novedades_consulta">Consulta de novedades</a>
                     </p>
                   </td>
                   <td class="labelCol empty">&nbsp;</td>
