--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -2,7 +2,66 @@
   data-tab="{{data}}"
   class="as__gov_int as__g_documentos_tcon_list_int {{cls}}"
 >
-  <h2>Información para accionistas</h2>
+
+  <section class="as__section">
+    <div class="as__section_wrapper">
+      <div class="as__section_content">
+        <div
+          class="py-8 w-full mx-auto max-w-3xl flex flex-col-reverse md:flex-row-reverse gap-8 md:justify-between md:items-center"
+        >
+          <div class="w-full md:w-1/2 flex flex-col gap-4">
+            <h4
+              class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold"
+            >
+              Información para los <br class="md:block hidden" />
+              <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1">  accionistas</span
+              >
+            </h4>
+          
+          </div>
+          <div class="w-full md:w-1/2">
+            <img
+              class="max-w-[350px] mx-auto"
+              src="/assets/images/icono_carta.webp"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+
+
+      <div class="pl-96 pr-96">
+        <h3 class="text-azul-dark">Medellín, 17 de mayo de 2024</h3>
+        <h3 class="my-10">Sr. Accionista Asulado Seguros de Vida S.A.<br/>
+           Vía correo electrónico</h3>
+      
+
+      <p class="my-5"><b>Referencia:</b> aviso derecho de preferencia</p>
+      <p class="my-5">Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de conformidad con el artículo 12 de sus estatutos, sobre negociabilidad y derecho de preferencia, le informa que, el día 15 de mayo de 2024, recibió tres ofertas de negociación de acciones, en los siguientes términos:</p>
+      <p class="my-5"><b>Acciones ofrecidas:</b></p>
+
+      <ul class="list-disc pl-8">
+        <li>Accionista 1 ofrece 6.086 acciones ordinarias de la Sociedad.</li>
+        <li>Accionista 2 ofrece 1.521 acciones ordinarias de la Sociedad.</li>
+        <li>Accionista 3 ofrece 1.014 acciones ordinarias de la Sociedad.</li>
+      </ul>
+
+      <p class="my-5">En caso de que decida aceptar la oferta y los demás accionistas la rechacen, podrá adquirir la totalidad de las acciones ofrecidas. Sin embargo, en caso de que varios accionistas concurran a la aceptación, las acciones se asignarán a prorrata de la participación que cada uno posea al momento de esta comunicación.</p>
+      <p class="my-5"><b>Precio:</b> $32.389,6996563549 cada una.</p>
+      <p class="my-5"><b>Plazo:</b> si está interesado en aceptar la oferta, tendrá quince (15) días hábiles contados a partir de esta comunicación. Para esto, deberá informar al representante legal de la Sociedad su decisión de aceptar la oferta, total o parcialmente. La notificación se recibirá en el correo <a class="text-azul-bright font-semibold" href="mailto:secretariageneral@asulado.com.co"> secretariageneral@asulado.com.co.</a></p>
+      <p class="my-5"><b>Forma de pago:</b> el pago se efectuará mediante transferencia bancaria a la cuenta o cuentas indicadas por el oferente.</p>
+
+      <h3 class="mt-5">Sebastián Mejía Aramburo</h3>
+      <p>Representante legal<br/>
+        Asulado Seguros de Vida S.A</p>
+
+      <span class="divider"></span>
+
+
+
+
+    </div>
+  </section>
 
 
 </div>
