--- a/src/partials/ciber/tab_2.html
+++ b/src/partials/ciber/tab_2.html
@@ -208,9 +208,7 @@
           class="pt-16 w-full mx-auto flex flex-col gap-y-4 md:flex-row md:justify-between md:items-center"
         >
           <div class="order-2 md:order-1 w-full md:w-1/3 flex flex-col">
-            <div
-              class=" text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 md:ml-28 md:mb-12"
-            >
+            <div class=" text-azul-dark bg-amarillo-light rounded-lg font-je px-8 py-5 md:ml-28 md:mb-12">
               <p>
                 Evita compartir información que pueda comprometer la seguridad
                 de tus datos e información,
