--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -12,9 +12,10 @@
 
             <div class="w-full mx-auto lg:w-2/3 xl:w-1/2"> 
               <img
-                class="lg:max-w-full mx-auto max-w-sm"
+                class="lg:max-w-full mx-auto max-w-sm !w-full"
                 src="/assets/images/img_carta.webp"
                 alt=""
+                
               />
             </div>
 
