Update filename in mix-manifest.json

--- a/src/partials/gobierno/6_informacion_accionistas.html
+++ b/src/partials/gobierno/6_informacion_accionistas.html
@@ -2,159 +2,225 @@
   data-tab="{{data}}"
   class="as__gov_int as__g_documentos_tcon_list_int lg:!py-0 {{cls}}"
 >
-
   <section class="as__section">
     <div class="as__section_wrapper md:!px-0">
       <div class="as__section_content_full">
-
         <div class="mt-6 pl-10 py-6">
-          <h3 class="!text-azul-bright !text-3xl">Medellín, 27 de mayo de 2024</h3>
+          <h3 class="!text-azul-bright !text-3xl">
+            Medellín, 27 de mayo de 2024
+          </h3>
         </div>
 
-        <div class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch">
-
-          <div class="bg-[#0f3c84] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat">
-
-            <div class="w-full mx-auto lg:w-2/3 xl:w-1/2"> 
+        <div
+          class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch"
+        >
+          <div
+            class="bg-[#0f3c84] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat"
+          >
+            <div class="w-full mx-auto lg:w-2/3 xl:w-1/2">
               <img
                 class="lg:max-w-full mx-auto max-w-sm !w-full"
                 src="/assets/images/img_carta_27_may.webp"
                 alt=""
-                
               />
             </div>
 
             <div class="mx-auto w-2/3 xl:w-1/2 py-8">
-              <h4 class="z-20 text-2xl md:text-5xl text-white font-je font-semibold">
+              <h4
+                class="z-20 text-2xl md:text-5xl text-white font-je font-semibold"
+              >
                 Información <br class="md:block hidden" />
                 para los <br class="md:block hidden" />
-                <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1">  accionistas</span>
+                <span
+                  class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+                >
+                  accionistas</span
+                >
               </h4>
-
             </div>
-
           </div>
 
-          <div class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16  bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat">
+          <div
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+          >
             <div class="">
-              
-              <h3 class="!text-azul-80 my-10">Sr. Accionista Asulado Seguros de Vida S.A.<br/>
-                 Vía correo electrónico</h3>
-            
-      
-                <p class="!text-azul-80 my-5"><b>Referencia:</b> aviso derecho de preferencia</p>
-                <p class="!text-azul-80 my-5">Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de conformidad con el artículo 12 de sus estatutos, sobre negociabilidad y derecho de preferencia, le informa que, el día 22 de mayo de 2024, recibió una oferta de negociación de acciones, en los siguientes términos:</p>
-                <p class="!text-azul-80 my-5"><b>1. Acciones ofrecidas:</b></p>
-          
-                <ul class="!text-azul-80 list-disc pl-8">
-                  <li>Accionista ofrece 1.521 acciones ordinarias de la Sociedad.</li>
-                </ul>
+              <h3 class="!text-azul-80 my-10">
+                Sr. Accionista Asulado Seguros de Vida S.A.<br />
+                Vía correo electrónico
+              </h3>
 
-                <p class="!text-azul-80 my-5">En caso de que decida aceptar la oferta y los demás accionistas la rechacen, podrá adquirir la totalidad de las acciones ofrecidas. Sin embargo, en caso de que varios accionistas concurran a la aceptación, las acciones se asignarán a prorrata de la participación que cada uno posea al momento de esta comunicación.</p>
+              <p class="!text-azul-80 my-5">
+                <b>Referencia:</b> aviso derecho de preferencia
+              </p>
+              <p class="!text-azul-80 my-5">
+                Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de
+                conformidad con el artículo 12 de sus estatutos, sobre
+                negociabilidad y derecho de preferencia, le informa que, el día
+                22 de mayo de 2024, recibió una oferta de negociación de
+                acciones, en los siguientes términos:
+              </p>
+              <p class="!text-azul-80 my-5"><b>1. Acciones ofrecidas:</b></p>
 
-                <p class="!text-azul-80 my-5"><b>2.   Precio:</b> $32.389,6996563549 cada una.</p>
-          
-                <p class="!text-azul-80 my-5"><b>3.     Plazo:</b> si está interesado en aceptar la oferta, tendrá quince (15) días hábiles contados a partir de esta comunicación. Para esto, deberá informar al representante legal de la Sociedad su decisión de aceptar la oferta, total o parcialmente. La notificación se recibirá en el correo <a class="text-azul-bright font-semibold" href="mailto:secretariageneral@asulado.com.co"> secretariageneral@asulado.com.co.</a></p>
+              <ul class="!text-azul-80 list-disc pl-8">
+                <li>
+                  Accionista ofrece 1.521 acciones ordinarias de la Sociedad.
+                </li>
+              </ul>
 
-             
-          
-                <p class="!text-azul-80 my-5"><b>4.     Forma de pago:</b> el pago se efectuará mediante transferencia bancaria a la cuenta o cuentas indicadas por el oferente.</p>
-                
-          
-                <h3 class="!text-azul-80 mt-5">Sebastián Mejía Aramburo</h3>
-                <p class="!text-azul-80">Representante legal<br/>
-                  Asulado Seguros de Vida S.A</p>
+              <p class="!text-azul-80 my-5">
+                En caso de que decida aceptar la oferta y los demás accionistas
+                la rechacen, podrá adquirir la totalidad de las acciones
+                ofrecidas. Sin embargo, en caso de que varios accionistas
+                concurran a la aceptación, las acciones se asignarán a prorrata
+                de la participación que cada uno posea al momento de esta
+                comunicación.
+              </p>
 
-               
+              <p class="!text-azul-80 my-5">
+                <b>2.   Precio:</b> $32.389,6996563549 cada una.
+              </p>
 
+              <p class="!text-azul-80 my-5">
+                <b>3.     Plazo:</b> si está interesado en aceptar la oferta,
+                tendrá quince (15) días hábiles contados a partir de esta
+                comunicación. Para esto, deberá informar al representante legal
+                de la Sociedad su decisión de aceptar la oferta, total o
+                parcialmente. La notificación se recibirá en el correo
+                <a
+                  class="text-azul-bright font-semibold"
+                  href="mailto:secretariageneral@asulado.com.co"
+                >
+                  secretariageneral@asulado.com.co.</a
+                >
+              </p>
 
+              <p class="!text-azul-80 my-5">
+                <b>4.     Forma de pago:</b> el pago se efectuará mediante
+                transferencia bancaria a la cuenta o cuentas indicadas por el
+                oferente.
+              </p>
 
-          
-              </div>
-
+              <h3 class="!text-azul-80 mt-5">Sebastián Mejía Aramburo</h3>
+              <p class="!text-azul-80">
+                Representante legal<br />
+                Asulado Seguros de Vida S.A
+              </p>
+            </div>
           </div>
         </div>
 
         <div class="divider"></div>
 
         <div class="pl-10 py-6">
-          <h3 class="!text-azul-bright !text-3xl">Medellín, 22 de mayo de 2024</h3>
+          <h3 class="!text-azul-bright !text-3xl">
+            Medellín, 22 de mayo de 2024
+          </h3>
         </div>
 
-
-        <div class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row md:justify-between md:items-stretch ">
-
-          <div class="bg-[#08c0fd] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat">
-
-            <div class="w-full mx-auto lg:w-2/3 xl:w-1/2"> 
+        <div
+          class="w-full mx-auto flex flex-col gap-y-0 lg:flex-row-reverse md:justify-between md:items-stretch"
+        >
+          <div
+            class="bg-[#08c0fd] w-full lg:w-1/2 flex flex-col justify-center items-start pt-8 bg-[url(/assets/images/GC/bg_1.svg)] bg-center bg-contain bg-no-repeat"
+          >
+            <div class="w-full mx-auto lg:w-2/3 xl:w-1/2">
               <img
                 class="lg:max-w-full mx-auto max-w-sm !w-full"
                 src="/assets/images/img_carta.webp"
                 alt=""
-                
               />
             </div>
 
             <div class="mx-auto w-2/3 xl:w-1/2 py-8">
-              <h4 class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold">
+              <h4
+                class="z-20 text-2xl md:text-5xl text-azul-norm font-je font-semibold"
+              >
                 Información <br class="md:block hidden" />
                 para los <br class="md:block hidden" />
-                <span class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1">  accionistas</span>
+                <span
+                  class="inline-block rounded-full text-azul-norm bg-amarillo-light px-3 py-1"
+                >
+                  accionistas</span
+                >
               </h4>
-
             </div>
-
           </div>
 
-          
-
-          <div class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 text-right bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat ">
+          <div
+            class="w-full lg:w-1/2 lg:px-4 px-4 xl:px-16 py-16 lg:text-right bg-alpha-15 bg-[url(/assets/images/GC/bg_2.svg)] bg-center bg-contain bg-no-repeat"
+          >
             <div class="">
-             
-              <h3 class="!text-azul-80 my-10">Sr. Accionista Asulado Seguros de Vida S.A.<br/>
-                 Vía correo electrónico</h3>
-            
-      
-                <p class="!text-azul-80 my-5"><b>Referencia:</b> aviso derecho de preferencia</p>
-                <p class="!text-azul-80 my-5">Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de conformidad con el artículo 12 de sus estatutos, sobre negociabilidad y derecho de preferencia, le informa que, el día 15 de mayo de 2024, recibió tres ofertas de negociación de acciones, en los siguientes términos:</p>
-                <p class="!text-azul-80 my-5"><b>1. Acciones ofrecidas:</b></p>
-          
-                <ul class="!text-azul-80  pl-8">
-                  <li>- Accionista 1 ofrece 6.086 acciones ordinarias de la Sociedad.</li>
-                  <li>- Accionista 2 ofrece 1.521 acciones ordinarias de la Sociedad.</li>
-                  <li>- Accionista 3 ofrece 1.014 acciones ordinarias de la Sociedad.</li>
-                </ul>
-          
-                <p class="!text-azul-80 my-5">En caso de que decida aceptar la oferta y los demás accionistas la rechacen, podrá adquirir la totalidad de las acciones ofrecidas. Sin embargo, en caso de que varios accionistas concurran a la aceptación, las acciones se asignarán a prorrata de la participación que cada uno posea al momento de esta comunicación.</p>
-                <p class="!text-azul-80 my-5"><b>2. Precio:</b> $32.389,6996563549 cada una.</p>
-                <p class="!text-azul-80 my-5"><b>3. Plazo:</b> si está interesado en aceptar la oferta, tendrá quince (15) días hábiles contados a partir de esta comunicación. Para esto, deberá informar al representante legal de la Sociedad su decisión de aceptar la oferta, total o parcialmente. La notificación se recibirá en el correo <a class="text-azul-bright font-semibold" href="mailto:secretariageneral@asulado.com.co"> secretariageneral@asulado.com.co.</a></p>
-                <p class="!text-azul-80 my-5"><b>4. Forma de pago</b> el pago se efectuará mediante transferencia bancaria a la cuenta o cuentas indicadas por el oferente.</p>
-          
-                <h3 class="!text-azul-80 mt-5">Sebastián Mejía Aramburo</h3>
-                <p class="!text-azul-80">Representante legal<br/>
-                  Asulado Seguros de Vida S.A</p>
+              <h3 class="!text-azul-80 my-10">
+                Sr. Accionista Asulado Seguros de Vida S.A.<br />
+                Vía correo electrónico
+              </h3>
 
-               
+              <p class="!text-azul-80 my-5">
+                <b>Referencia:</b> aviso derecho de preferencia
+              </p>
+              <p class="!text-azul-80 my-5">
+                Asulado Seguros de Vida S.A. (en adelante la “Sociedad”), de
+                conformidad con el artículo 12 de sus estatutos, sobre
+                negociabilidad y derecho de preferencia, le informa que, el día
+                15 de mayo de 2024, recibió tres ofertas de negociación de
+                acciones, en los siguientes términos:
+              </p>
+              <p class="!text-azul-80 my-5"><b>1. Acciones ofrecidas:</b></p>
 
+              <ul class="!text-azul-80 pl-8">
+                <li>
+                  - Accionista 1 ofrece 6.086 acciones ordinarias de la
+                  Sociedad.
+                </li>
+                <li>
+                  - Accionista 2 ofrece 1.521 acciones ordinarias de la
+                  Sociedad.
+                </li>
+                <li>
+                  - Accionista 3 ofrece 1.014 acciones ordinarias de la
+                  Sociedad.
+                </li>
+              </ul>
 
+              <p class="!text-azul-80 my-5">
+                En caso de que decida aceptar la oferta y los demás accionistas
+                la rechacen, podrá adquirir la totalidad de las acciones
+                ofrecidas. Sin embargo, en caso de que varios accionistas
+                concurran a la aceptación, las acciones se asignarán a prorrata
+                de la participación que cada uno posea al momento de esta
+                comunicación.
+              </p>
+              <p class="!text-azul-80 my-5">
+                <b>2. Precio:</b> $32.389,6996563549 cada una.
+              </p>
+              <p class="!text-azul-80 my-5">
+                <b>3. Plazo:</b> si está interesado en aceptar la oferta, tendrá
+                quince (15) días hábiles contados a partir de esta comunicación.
+                Para esto, deberá informar al representante legal de la Sociedad
+                su decisión de aceptar la oferta, total o parcialmente. La
+                notificación se recibirá en el correo
+                <a
+                  class="text-azul-bright font-semibold"
+                  href="mailto:secretariageneral@asulado.com.co"
+                >
+                  secretariageneral@asulado.com.co.</a
+                >
+              </p>
+              <p class="!text-azul-80 my-5">
+                <b>4. Forma de pago</b> el pago se efectuará mediante
+                transferencia bancaria a la cuenta o cuentas indicadas por el
+                oferente.
+              </p>
 
-          
-              </div>
-
+              <h3 class="!text-azul-80 mt-5">Sebastián Mejía Aramburo</h3>
+              <p class="!text-azul-80">
+                Representante legal<br />
+                Asulado Seguros de Vida S.A
+              </p>
+            </div>
           </div>
-
-         
-
         </div>
-
-       
-    
-        
-
       </div>
     </div>
   </section>
-
-
 </div>
-
